added some more stuff

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/GENERIC_UTILS.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/login_page.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/dashboard_page.js') }}"></script>
 </head>
 
 <body class="bg-white dark:bg-gray-800 w-full h-full">
@@ -26,7 +26,7 @@
                         type="search" placeholder="Search">
                     <div class="ml-4 flex items-center space-x-4">
                         <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/add-book.png"
-                            alt="Add New Book">
+                            id="register_new_book" alt="Add New Book">
                         <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/user-male-circle.png"
                             alt="User">
                         <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/statistics.png"
