--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,8 +25,9 @@
                     <input class="rounded-full px-4 py-2 border-2 border-gray-300 text-lg w-32 md:w-64 lg:w-96"
                         type="search" placeholder="Search">
                     <div class="ml-4 flex items-center space-x-4">
-                        <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/add-book.png"
-                            id="register_new_book" alt="Add New Book">
+                        <img class="h-6 w-6 cursor-pointer"
+                            src="https://img.icons8.com/ios-glyphs/30/000000/add-book.png" id="register_new_book"
+                            alt="Add New Book">
                         <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/user-male-circle.png"
                             alt="User">
                         <img class="h-6 w-6" src="https://img.icons8.com/ios-glyphs/30/000000/statistics.png"
@@ -39,11 +40,61 @@
         </div>
     </nav>
 
-    <div class="w-full h-full bg-green-600 pt-10">
+    <div class="w-full h-full  pt-16 md:flex md:flex-row md:justify-between">
+
+        <div class="h-full w-3/12 shadow-lg border-r-2 border-gray-500 " id="filter_col">
+            <div class="w-full p-2 text-xl font-semibold text-center border-b-2 border-gray-200 shadow-lg">
+                <span>Filters Books</span>
+            </div>
+
+            <div class="w-full p-2 h-80 overflow-y-auto shadow-lg flex flex-row flex-wrap" id="filter_box_for_books">
+
+
+            </div>
+        </div>
+
+
+        <div class="h-full w-9/12 shadow-lg" id="main_col">
+
+            <!-- Single moc stuffing. -->
+            <div class="w-full h-full flex flex-col overflow-y-auto">
+                <div class="w-full p-2 text-base h-11 border-b-2 border-gray-200 shadow-lg flex flex-row justify-end">
+                    <span class="mr-auto float-left">Total Books: <span id="statistics_total_books">0</span></span>
+
+                    <span class="mr-2 pr-2 border-r-2 border-gray-200">Users: <span
+                            id="statistics_total_users">0</span></span>
+                    <span class="mr-2 pr-2 border-r-2 border-gray-200">borrowed📖: <span
+                            id="statistics_total_borrowed_books">0</span> </span>
+                    <span class="mr-2 pr-2 border-r-0 border-gray-200">returned📖: <span
+                            id="statistics_total_returned_books">0</span></span>
+
+                </div>
+
+                <div class="w-full p-2 h-full overflow-y-auto shadow-lg flex flex-col" id="books_box">
+
+                    <div class="w-full flex flex-col shadow-md border-b-2 border-gray-200">
+                        <div class="flex flex-row justify-items-end text-black font-semibold p-2">
+                            <span>1)<span> Higher Engineering Mathematics</span> </span>
+                            <span class="text-base float-right ml-auto mr-2">Lend</span>
+                            <!-- <span class="text-base float-right ml-auto mr-2">Make Unavailable</span>
+                            <span class="text-base float-right ml-auto mr-2">Hide Book</span> -->
+                        </div>
+                        <div
+                            class="w-full text-right bg-gray-200 font-semibold  hover:text-green-600 text-green-500 cursor-pointer pl-2 pr-2 rounded-b-lg">
+                            Show Details
+                        </div>
+                    </div>
+
+
+                </div>
 
 
 
-    </div>
+            </div>
+
+
+
+        </div>
 
 
 
