--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,11 +43,12 @@
     <div class="w-full h-full  pt-16 md:flex md:flex-row md:justify-between">
 
         <div class="h-full w-3/12 shadow-lg border-r-2 border-gray-500 " id="filter_col">
-            <div class="w-full p-2 text-xl font-semibold text-center border-b-2 border-gray-200 shadow-lg">
+            <div id="" class="w-full p-2 text-xl font-semibold text-center border-b-2 border-gray-200 shadow-lg">
                 <span>Filters Books</span>
             </div>
 
-            <div class="w-full p-2 h-80 overflow-y-auto shadow-lg flex flex-row flex-wrap" id="filter_box_for_books">
+            <div class="w-full p-2 h-80 overflow-y-auto shadow-lg flex justify-evenly flex-row flex-wrap"
+                id="filter_tags">
 
 
             </div>
