loads of stuff need to add bleach

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="flex items-center">
                     <input class="rounded-full px-4 py-2 border-2 border-gray-300 text-lg w-32 md:w-64 lg:w-96"
-                        type="search" placeholder="Search">
+                        type="search" placeholder="Search" id="search_bar">
                     <div class="ml-4 flex items-center space-x-4">
                         <img class="h-6 w-6 cursor-pointer"
                             src="https://img.icons8.com/ios-glyphs/30/000000/add-book.png" id="register_new_book"
@@ -51,6 +51,16 @@
                 id="filter_tags">
 
 
+            </div>
+
+            <div
+                class="w-full p-2 mt-2 bg-gray-200 hover:bg-gray-300 text-black font-semibold shadow-lg text-center cursor-pointer">
+                <span>Clear Filters</span>
+            </div>
+
+            <div
+                class="w-full p-2 mt-2 bg-gray-200 hover:bg-gray-300 text-black font-semibold shadow-lg text-center cursor-pointer">
+                <span>Return Book</span>
             </div>
         </div>
 
