That sounds about right

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -53,7 +53,7 @@
 
             </div>
 
-            <div
+            <div id="cleaner"
                 class="w-full p-2 mt-2 bg-gray-200 hover:bg-gray-300 text-black font-semibold shadow-lg text-center cursor-pointer">
                 <span>Clear Filters</span>
             </div>
