--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -62,7 +62,7 @@
 
             <div id="return_book"
                 class="w-full p-2 mt-2 bg-green-300 hover:bg-green-400 text-black font-semibold shadow-lg text-center cursor-pointer">
-                <span>Return Book</span>
+                <span>Scanner</span>
             </div>
         </div>
 
