--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -95,8 +95,13 @@
                             id="statistics_total_users">0</span></span>
                     <span class="mr-2 pr-2 border-r-2 border-gray-200">borrowed📖: <span
                             id="statistics_total_borrowed_books">0</span> </span>
-                    <span class="mr-2 pr-2 border-r-0 border-gray-200">returned📖: <span
-                            id="statistics_total_returned_books">0</span></span>
+                    <span class="mr-2 pr-2 border-r-2 border-gray-200">Overdue📖: <span
+                            id="statistics_number_of_books_overdue">0</span></span>
+                    <span class="mr-2 pr-2 border-r-2 border-gray-200">Penality till now: <span
+                            id="statistics_total_penality_due_to_late_return">0</span></span>
+                    <span class="mr-2 pr-2 border-r-0 border-gray-200">Amount Paid till now: <span
+                            id="statistics_total_amount_paid_by_users">0</span></span>
+
 
                 </div>
 
