Need to check connection

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,6 +40,11 @@
                             src="https://img.icons8.com/ios-glyphs/30/000000/statistics.png" alt="Statistics">
                         <img class="h-6 w-6 hover:bg-gray-300"
                             src="https://img.icons8.com/ios-glyphs/30/000000/settings.png" alt="Settings">
+                        <a href="/api/v1/users/logout">
+                            <img id="logout_user" class="h-6 w-6 hover:bg-gray-300 ml-auto float-right cursor-pointer"
+                                src="https://img.icons8.com/ios-glyphs/30/000000/logout-rounded.png" alt="Logout"
+                                title="logout">
+                        </a>
                     </div>
                 </div>
             </div>
